# mlx-cog-gen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.sh  learnings.md
.github/workflows/: ci.yml
benchmark/: benchmark.sh  benchmark_and_log.sh  generate_test_data.sh  points.csv
docs/: known-issues.md  why-mlx-not-opencl.md
src/: mlx_overviews.cpp  mlx_overviews.h  mlx_translate.cpp
tests/: CMakeLists.txt  test_cog_stats.cpp  test_dtype_rejection.cpp  test_mlx.cpp  test_overview_dims.cpp
